--- a/exploratory_analysis/Example.ipynb
+++ b/exploratory_analysis/Example.ipynb
@@ -66,29 +66,29 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>K1</td>\n",
-       "      <td>[0285, , , , , ]</td>\n",
-       "      <td>[True, False, False, False, True, True, True, ...</td>\n",
+       "      <td>285</td>\n",
+       "      <td>True</td>\n",
        "      <td>0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>K2</td>\n",
-       "      <td>[0336, , , , , ]</td>\n",
-       "      <td>[True, True, True, True, True, False, False, F...</td>\n",
+       "      <td>336</td>\n",
+       "      <td>False</td>\n",
        "      <td>0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>K3</td>\n",
-       "      <td>[0285, , , , , ]</td>\n",
-       "      <td>[True, False, False, False, True, True, True, ...</td>\n",
+       "      <td>285</td>\n",
+       "      <td>True</td>\n",
        "      <td>0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>K4</td>\n",
-       "      <td>[0386, 0384, , , , ]</td>\n",
-       "      <td>[True, True, False, False, True, False, True, ...</td>\n",
+       "      <td>386</td>\n",
+       "      <td>False</td>\n",
        "      <td>000F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -96,17 +96,11 @@
        "</div>"
       ],
       "text/plain": [
-       "  name                 packs  \\\n",
-       "0   K1      [0285, , , , , ]   \n",
-       "1   K2      [0336, , , , , ]   \n",
-       "2   K3      [0285, , , , , ]   \n",
-       "3   K4  [0386, 0384, , , , ]   \n",
-       "\n",
-       "                                               itmes  mask  \n",
-       "0  [True, False, False, False, True, True, True, ...  0000  \n",
-       "1  [True, True, True, True, True, False, False, F...  0000  \n",
-       "2  [True, False, False, False, True, True, True, ...  0000  \n",
-       "3  [True, True, False, False, True, False, True, ...  000F  "
+       "  name  packs  itmes  mask\n",
+       "0   K1    285   True  0000\n",
+       "1   K2    336  False  0000\n",
+       "2   K3    285   True  0000\n",
+       "3   K4    386  False  000F"
       ]
      },
      "execution_count": 2,
@@ -115,7 +109,7 @@
     }
    ],
    "source": [
-    "json_df = eda.read_file(\"Config.json\")\n",
+    "json_df = eda.read_file(\"Config\", \"json\")\n",
     "json_df"
    ]
   },
